use entries-selector, fix areablocker layout issue

--- a/src/applications/content-entries-app/entry/entry-metadata/entry-metadata.component.scss
+++ b/src/applications/content-entries-app/entry/entry-metadata/entry-metadata.component.scss
@@ -21,10 +21,13 @@ hr{
 }
 .kMetadataDetails{
 	padding-bottom: 8px;
-	padding-left: 24px;
-	padding-right: 138px;
 	padding-top: 30px;
 	width: 100%;
+
+  .kMetadataDetailsItem {
+    padding-left: 24px;
+    padding-right: 138px;
+  }
 
 	.kSchemaTitle{
 		color: $kGrayscale1;
@@ -35,6 +38,10 @@ hr{
 	}
 
 	/deep/ {
+    k-dynamic-form-item {
+      padding-left: 24px;
+      padding-right: 138px;
+    }
 
 		.kRow {
 			display: flex;
@@ -42,9 +49,12 @@ hr{
 
       &.kLinkedEntries {
         flex-direction: column;
+        margin-left: -24px;
+        margin-right: -138px;
 
         .kFormLabelContainer {
           margin-bottom: 15px;
+          margin-left: 24px;
         }
       }
 
