--- a/src/applications/content-entries-app/entry/entry-metadata/entry-selector/linked-entries-table/linked-entries-table.component.scss
+++ b/src/applications/content-entries-app/entry/entry-metadata/entry-selector/linked-entries-table/linked-entries-table.component.scss
@@ -1,10 +1,5 @@
 @import 'app-theme/_variables.scss';
 
-:host {
-  margin-left: -24px;
-  margin-right: -138px;
-}
-
 .kLinkedEntriesTable {
   .kTableColumn {
     display: inline-block;
