--- a/src/applications/content-entries-app/entry/entry-metadata/entry-selector/linked-entries/linked-entries.component.scss
+++ b/src/applications/content-entries-app/entry/entry-metadata/entry-selector/linked-entries/linked-entries.component.scss
@@ -43,6 +43,7 @@
 
   .kAddEntriesBtn {
     width: 120px;
+    margin-left: 24px;
   }
 }
 
